# equibets

./: .eslintrc.json  .gitignore  AGENTS.md  README.md  index.html  netlify.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  styles.css  tsconfig.app.json  vercel.json
api/: __init__.py  main.py
client/: index.html  package.json
data/: country_scopes.json  current_event_feed.json  current_event_live_scores.json  current_event_results.json  current_event_scores.json  current_events.json  current_live_scores.json  event_sources.json  fei_results.json  fei_search_pages.json  live_event_results.json  live_event_scores.json  live_scores.json  live_scoring_snapshot.json  national_event_coverage.json  national_event_scope.json  national_federations.json  source_compliance.json  source_coverage.json
docs/: equibets_app_deployment.md  legal_eventing_mvp_plan.md  live_results_feed.md  platform_schema.sql  prediction_platform_architecture.md  prediction_platform_schema.sql  results_calculator_feature.md  vercel_deployment.md
equibets/: __init__.py  compliance.py  current_events.py  database.py  events.py  fei.py  fei_bot.py  horses.py  live.py  live_scores.py  live_scoring.py  national_events.py  national_scope.py  pipeline.py  probability.py  rechenstelle.py  results.py  sources.py  upcoming_events.py  update_public_data.py
js/: app.js  data.js  model.js
public/: _redirects  current-events.json  current_event_scores.json  live-results.json  live_scores.json  manifest.webmanifest  robots.txt  sitemap.xml  sw.js
server/: package.json
src/: pwa.ts  (+31 more)
(+35 files in other folders)
