[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "equibets"
version = "0.1.0"
description = "Eventing results calculator and data source registry utilities."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "psycopg[binary]",
    "uvicorn",
]

[tool.setuptools]
packages = ["api", "equibets"]
